--- a/src/HttpCrawler.csproj
+++ b/src/HttpCrawler.csproj
@@ -29,6 +29,8 @@
 
   <ItemGroup>
     <PackageReference Include="CommunityToolkit.WinUI" Version="7.1.2" />
+    <PackageReference Include="CommunityToolkit.WinUI.Controls.Segmented" Version="8.0.240109" />
+    <PackageReference Include="CommunityToolkit.WinUI.Controls.SettingsControls" Version="8.0.240109" />
     <PackageReference Include="CommunityToolkit.WinUI.UI" Version="7.1.2" />
     <PackageReference Include="Microsoft.Windows.CsWin32" Version="0.3.106">
       <!--PrivateAssets>all</PrivateAssets>
