feature: 网页自动控制（仍在开发中）

--- a/src/HttpCrawler.csproj
+++ b/src/HttpCrawler.csproj
@@ -13,6 +13,7 @@
     <EnableMsixTooling>true</EnableMsixTooling>
   </PropertyGroup>
   <ItemGroup>
+    <None Remove="Pages\AutomaticOperationsPage.xaml" />
     <None Remove="Pages\HttpRequestPage.xaml" />
     <None Remove="Pages\SettingsPage.xaml" />
   </ItemGroup>
