change: 项目重命名

--- a/src/Properties/launchSettings.json
+++ b/src/Properties/launchSettings.json
@@ -1,9 +1,9 @@
 {
   "profiles": {
-    "HttpCrawler (Package)": {
+    "WebTool (Package)": {
       "commandName": "MsixPackage"
     },
-    "HttpCrawler (Unpackaged)": {
+    "WebTool (Unpackaged)": {
       "commandName": "Project"
     }
   }
