--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,10 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/main/VisualStudio.gitignore
 
+#? User defined
+Properties/launchSettings.json
+res/*/local_only
+
 # User-specific files
 *.rsuser
 *.suo
@@ -395,6 +399,3 @@ FodyWeavers.xsd
 
 # JetBrains Rider
 *.sln.iml
-
-# User defined
-Properties/launchSettings.json
